# medici

./: .gitattributes  .gitignore  LICENSE  README.md  app.config.ts  components.json  compose.example.yaml  compose.yaml  eslint.config.js  justfile  mix.exs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: frontend.yaml  rust.yml  server.yml
.svelte-kit/: ambient.d.ts
.svelte-kit/types/: route_meta_data.json
app/: app.css  routeTree.gen.ts  router.tsx
app/components/: add-expense-modal.tsx  add-friend-modal.tsx  create-pool-modal.tsx  expense.tsx  login-form.tsx  member-profile.tsx  pool-summay.tsx
app/components/ui/: dropdown-menu.tsx  form.tsx  spinner.tsx
app/hooks/: auth.tsx
app/routes/: __root.tsx  expenses.$expenseId.tsx  friends.tsx  index.tsx  login.tsx  pools.$poolId.tsx  posts.$postId.tsx  posts.tsx  posts_.$postId.deep.tsx  reports.tsx
app/server/: commands.md  package.json  pnpm-lock.yaml  query.sql  schema.sql  sqlc.yaml
app/trpc/: router.ts
backend/: .eslintcache  commands.md  package.json  pnpm-lock.yaml
backend/config/: config.exs
backend/src/: server.ts
backend/test/: medici_test.exs
client/: index.ts
frontend/: Dockerfile  components.json  eslint.config.js  globals.css  index.html  openapi.json  package.json  pnpm-lock.yaml  router.tsx  schema.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/components/: NotFound.tsx  add-expense-modal.tsx  add-friend-modal.tsx  create-pool-modal.tsx  expense.tsx  login-form.tsx  member-profile.tsx  pool-summay.tsx
frontend/hooks/: auth.tsx
frontend/pages/: _app.tsx  friends.tsx  index.tsx  login.tsx  pools.$poolId.tsx  signup.tsx
frontend/routes/: __root.tsx  friends.tsx  index.tsx  login.tsx  pools.$poolId.tsx  posts.$postId.tsx  posts.tsx  signup.tsx
frontend/src/: api.ts  main.tsx  routeTree.gen.ts
lib/: medici.ex
lib/medici/: application.ex  expense.ex  lineitem.ex  member.ex  pool.ex  pool_membership.ex  queries.ex  repo.ex  router.ex  serializer.ex
server/: .dockerignore  Cargo.toml  Dockerfile  db.ts  diesel.toml  index.ts  trpc.ts
server/migrations/2025-04-24-013441_create_tables/: down.sql  up.sql
server/migrations/2025-06-06-192631_add_expense_types/: down.sql  up.sql
server/migrations/2025-06-16-141314_add_default_split_method_col/: down.sql  up.sql
server/migrations/2025-08-05-015324_add_rules/: down.sql  up.sql
server/queries/: query.sql
server/src/: api_doc.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
server/src/tests/: mod.rs
trpc/: init.ts  router.ts
(+106 files in other folders)
