[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hyper = "1.6.0"

time = "0.3.41"
rust_decimal = { version = "1.37.1", features = ["db-postgres"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.0", features = [
    "postgres",
    "uuid",
    "time",
    "numeric",
    "serde_json",
    "chrono",
    "r2d2",
    "numeric",
] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
chrono = { version = "0.4", features = ["serde"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
r2d2 = "0.8.10"
once_cell = "1.18.0"
anyhow = "1.0"
bcrypt = "0.17.0"
utoipa = { version = "5", features = ["uuid", "chrono", "decimal", "time"] }
utoipa-axum = "0.2"
rust_decimal_macros = "1.32"
